--- a/src/main/resources/templates/lesson01/ex02.html
+++ b/src/main/resources/templates/lesson01/ex02.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>ex02</title>
+<title>Ex02</title>
 </head>
 <body>
-	<h1>EX02</h1>
-	<h3>Hello world</h3>
+	<h1>Ex02</h1>
+	<h3>Hello world!</h3>
 </body>
 </html>
