--- a/src/main/resources/templates/lesson05/ex02.html
+++ b/src/main/resources/templates/lesson05/ex02.html
@@ -47,8 +47,8 @@
 				<td th:text="${status.count}">번호</td>
 				<!-- key이름으로 한번더 접근 하지 않으면 모든게 다 나옴 -->
 				<td th:text="${user.name}">이름</td>
-				<td th:text="${user.age}">이름</td>
-				<td th:text="${user.hobby}">이름</td>
+				<td th:text="${user.age}">나이</td>
+				<td th:text="${user.hobby}">취미</td>
 				<td></td>
 				<td></td>
 			</tr>
